kubernetes-manifests/middleware-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-config
  namespace: nerabbs
  labels:
    app: middleware-config
spec:
  replicas: 2
  selector:
    matchLabels:
      app: middleware-config
  template:
    metadata:
      name: middleware-config
      labels:
        app: middleware-config
    spec:
      containers:
        - name: middleware-config
          image: hikarilan/nerabbs:middleware-config
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: middleware-config
  namespace: nerabbs
spec:
  selector:
    app: middleware-config
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
