kubernetes-manifests/minio.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: nerabbs
spec:
  selector:
    matchLabels:
      app: minio
  serviceName: "minio"
  replicas: 1
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio
          ports:
            - name: minio
              containerPort: 9000
          command: [ "minio" ]
          args: [ "server", "/data" ]
          volumeMounts:
            - name: minio
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: minio
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: nerabbs
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
