kubernetes-manifests/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: nerabbs
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: "redis"
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - name: redis
              containerPort: 6379
          command: [ "redis-server" ]
          args: [ "--bind", "0.0.0.0", "--port", "6379" ]
          volumeMounts:
            - name: redis
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: nerabbs
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
