kubernetes-manifests/service-comment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-comment
  namespace: nerabbs
  labels:
    app: service-comment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-comment
  template:
    metadata:
      name: service-comment
      labels:
        app: service-comment
    spec:
      containers:
        - name: service-comment
          image: hikarilan/nerabbs:service-comment
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: service-comment
  namespace: nerabbs
spec:
  selector:
    app: service-comment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
