kubernetes-manifests/service-oss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-oss
  namespace: nerabbs
  labels:
    app: service-oss
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-oss
  template:
    metadata:
      name: service-oss
      labels:
        app: service-oss
    spec:
      containers:
        - name: service-oss
          image: hikarilan/nerabbs:service-oss
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: service-oss
  namespace: nerabbs
spec:
  selector:
    app: service-oss
  ports:
    - name: "http-8080"
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: "grpc-9090"
      protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
