kubernetes-manifests/service-post.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-post
  namespace: nerabbs
  labels:
    app: service-post
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-post
  template:
    metadata:
      name: service-post
      labels:
        app: service-post
    spec:
      containers:
        - name: service-post
          image: hikarilan/nerabbs:service-post
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: service-post
  namespace: nerabbs
spec:
  selector:
    app: service-post
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
