kubernetes-manifests/service-user-profile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-user-profile
  namespace: nerabbs
  labels:
    app: service-user-profile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-user-profile
  template:
    metadata:
      name: service-user-profile
      labels:
        app: service-user-profile
    spec:
      containers:
        - name: service-user-profile
          image: hikarilan/nerabbs:service-user-profile
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: service-user-profile
  namespace: nerabbs
spec:
  selector:
    app: service-user-profile
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
